Correct appearance of 'racer jump menu' for margins of seq num

--- a/app/assets/stylesheets/racers.scss
+++ b/app/assets/stylesheets/racers.scss
@@ -170,6 +170,10 @@ input.in_ranch {
   #racer_menu {
     position: relative;
     bottom: 100px;
+
+    a {
+      margin: 0;
+    }
   }
 
   #race_candidates {
